--- a/rorolite.yml
+++ b/rorolite.yml
@@ -1,8 +1,13 @@
 runtime: python3-keras
 host: rorolite.do.rorodata.net
-user: anand
+user: root
 
 services:
   - name: api
     function: background_removal.predict
     port: 8080
+
+  - name: web
+    command: python3 -m http.server 8000
+    directory: web
+    port: 8000
